# agent_games

./: .codecov.yml  .dockerignore  .env  .gitignore  CLAUDE.md  Pipfile  README.md  README2.md  REFACTORING_ADVICE.md  agent_send.py  animated_multi_player_game.py  api.py  api_no_rate_limit.py  application.py  arena_champions_simulator.py  arena_champions_simulator_sim1000.py  auth.py  check_file.py  code_documentation.md  colors.json  config.py  create_5_test_players.py  custom_rewards_test.py  database.py  docker-compose.test.yml  docker-compose.yml  docker_cleanup.py  docker_results.json  docker_script.py  docker_simulation.py  dockerfile  dockerfile_script.py  game.py  game_simulation.py  game_simulation_100_runs_2023-11-14_22-29-34.txt  game_simulation_100_runs_2023-11-14_22-29-36.txt  game_simulation_100_runs_2023-11-14_22-29-38.txt  game_simulation_100_runs_2023-11-14_22-29-40.txt  greedy_pig.py  greedy_pig_sim.py  (+42 more)
.do/: app.yaml
agent_games.egg-info/: PKG-INFO  SOURCES.txt
api_rate_limits/: api_rate_limit.py  api_smart_limit.py
backend/: .coveragec  .env  .gitignore  Dockerfile  Pipfile  README.md  agent_script.py  api.py  api_old.py  auth.py  bench_validation.py  celery_app.py  celery_utils.py  check_schema_drift.sh  codebase_review_2026-07.md  colors.json  config.py  coverage_report.txt  database.py  database_old.py  docker_results.json  docker_simulation.py  dockerfile  dockerfile_script.py  entrypoint.sh  error-handling-convention.md  local_prisoner_sim.py  local_sim.py  log_setup.py  models_api.py  models_db.py  production_database_setup.py  run.py  (+13 more)
(+971 files in other folders)
