[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_games"
version = "0.1.0"
description = "Agent Games Backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "backend/tests",
]
addopts = "-v"