[project]
name = "agent-games"
version = "0.1.0"
description = "Agent Games Backend"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.35.0",
    "docker>=7.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.0",
    "gunicorn>=25.0.0",
    "httpx>=0.28.0",
    "psycopg[c]>=3.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "pytz>=2026.1",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
